--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "Tyler Holland",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ibm-watson": "^6.0.0",
+    "node-notifier": "^9.0.0",
     "nodemon": "^2.0.6",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
